--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-temp",
+  "name": "reggies-adventure",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^50.17.1"
   }
 }
