--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "classnames": "^2.5.1",
+    "dotenv": "^17.3.1",
     "nes.css": "^2.2.1",
     "next": "16.1.6",
     "openai": "^6.22.0",
