--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@privy-io/react-auth": "^3.13.1",
+    "@supabase/supabase-js": "^2.95.3",
     "classnames": "^2.5.1",
     "dotenv": "^17.3.1",
     "nes.css": "^2.2.1",
